--- a/.github/workflows/workflow_test.yaml
+++ b/.github/workflows/workflow_test.yaml
@@ -7,7 +7,10 @@ jobs:
   Workflow-tests:
     runs-on: ubuntu-latest
     steps:
-
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        ref: main
     - name: test
       env:
         GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
