--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,3 +7,9 @@ updates:
   directory: "/" # Location of package manifests
   schedule:
     interval: "daily"
+- package-ecosystem: "pip"
+  directory: "/"
+  schedule:
+    interval: "daily"
+  labels:
+    - "pip dependencies"
