--- a/.github/workflows/auto_update_and_release.yaml
+++ b/.github/workflows/auto_update_and_release.yaml
@@ -22,7 +22,7 @@ jobs:
       run: |
         sudo apt install fontforge
         pip install -r "./requirements.txt" -q
-        $output = Invoke-Expression "python ./auto_update.py"
+        $output = Invoke-Expression "python ./auto_update.py ${{secrets.PAT}}"
         if ($output -match "Success"){
           git config --global user.email ${{ secrets.GIT_USER_EMAIL }}
           git config --global user.name ${{ secrets.GIT_USER_NAME }}
