Add PAT support for build.ps1

--- a/gftools_builder_config.yaml
+++ b/gftools_builder_config.yaml
@@ -10,11 +10,8 @@
     familyName: JetBrains Mono
     logLevel: ERROR
     buildVariable: false
-    buildStatic: false
+    buildStatic: true
     buildOTF: false
     buildTTF: true
     buildWebfont: false
-    cleanUp: false
-    
-  
-
+    cleanUp: true
