--- a/.github/workflows/build_on_windows.yaml
+++ b/.github/workflows/build_on_windows.yaml
@@ -15,8 +15,6 @@ jobs:
       with:
         ref: main
     - name: Check for new release
-      env:
-        GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
       shell: pwsh
       run: |
         if ($(. "./Utils/check_if_updated_within_24H.ps1" ${{ secrets.GIT_USER_NAME }} JetBrainsMonoNerdFonts ${{secrets.PAT}})){
@@ -43,7 +41,7 @@ jobs:
         choco install fontforge --yes --limitoutput --force
         Add-PathToCurrentProcessEnvPath -Path "C:\Program Files (x86)\FontForgeBuilds\bin"
         pip install -r "./requirements.txt" -q
-        . ".\build.ps1"
+        . ".\build.ps1" ${{secrets.PAT}}
         
 
 
